; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_tclsqlite.c_DbUpdateHandler.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_tclsqlite.c_DbUpdateHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@DbUpdateHandler.azStr = internal global [3 x i8*] [i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i32 0, i32 0)], align 16
@.str = private unnamed_addr constant [7 x i8] c"DELETE\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"INSERT\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"UPDATE\00", align 1
@SQLITE_DELETE = common dso_local global i32 0, align 4
@SQLITE_INSERT = common dso_local global i32 0, align 4
@SQLITE_UPDATE = common dso_local global i32 0, align 4
@TCL_EVAL_DIRECT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i8*, i8*, i32)* @DbUpdateHandler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DbUpdateHandler(i8* %0, i32 %1, i8* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_2__*, align 8
  %12 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = bitcast i8* %13 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %14, %struct.TYPE_2__** %11, align 8
  %15 = load i32, i32* @SQLITE_DELETE, align 4
  %16 = sub nsw i32 %15, 1
  %17 = sdiv i32 %16, 9
  %18 = icmp eq i32 %17, 0
  %19 = zext i1 %18 to i32
  %20 = call i32 @assert(i32 %19)
  %21 = load i32, i32* @SQLITE_INSERT, align 4
  %22 = sub nsw i32 %21, 1
  %23 = sdiv i32 %22, 9
  %24 = icmp eq i32 %23, 1
  %25 = zext i1 %24 to i32
  %26 = call i32 @assert(i32 %25)
  %27 = load i32, i32* @SQLITE_UPDATE, align 4
  %28 = sub nsw i32 %27, 1
  %29 = sdiv i32 %28, 9
  %30 = icmp eq i32 %29, 2
  %31 = zext i1 %30 to i32
  %32 = call i32 @assert(i32 %31)
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @assert(i32 %35)
  %37 = load i32, i32* %7, align 4
  %38 = load i32, i32* @SQLITE_INSERT, align 4
  %39 = icmp eq i32 %37, %38
  br i1 %39, label %48, label %40

40:                                               ; preds = %5
  %41 = load i32, i32* %7, align 4
  %42 = load i32, i32* @SQLITE_UPDATE, align 4
  %43 = icmp eq i32 %41, %42
  br i1 %43, label %48, label %44

44:                                               ; preds = %40
  %45 = load i32, i32* %7, align 4
  %46 = load i32, i32* @SQLITE_DELETE, align 4
  %47 = icmp eq i32 %45, %46
  br label %48

48:                                               ; preds = %44, %40, %5
  %49 = phi i1 [ true, %40 ], [ true, %5 ], [ %47, %44 ]
  %50 = zext i1 %49 to i32
  %51 = call i32 @assert(i32 %50)
  %52 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %53 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = call i32* @Tcl_DuplicateObj(i32 %54)
  store i32* %55, i32** %12, align 8
  %56 = load i32*, i32** %12, align 8
  %57 = call i32 @Tcl_IncrRefCount(i32* %56)
  %58 = load i32*, i32** %12, align 8
  %59 = load i32, i32* %7, align 4
  %60 = sub nsw i32 %59, 1
  %61 = sdiv i32 %60, 9
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds [3 x i8*], [3 x i8*]* @DbUpdateHandler.azStr, i64 0, i64 %62
  %64 = load i8*, i8** %63, align 8
  %65 = call i32 @Tcl_NewStringObj(i8* %64, i32 -1)
  %66 = call i32 @Tcl_ListObjAppendElement(i32 0, i32* %58, i32 %65)
  %67 = load i32*, i32** %12, align 8
  %68 = load i8*, i8** %8, align 8
  %69 = call i32 @Tcl_NewStringObj(i8* %68, i32 -1)
  %70 = call i32 @Tcl_ListObjAppendElement(i32 0, i32* %67, i32 %69)
  %71 = load i32*, i32** %12, align 8
  %72 = load i8*, i8** %9, align 8
  %73 = call i32 @Tcl_NewStringObj(i8* %72, i32 -1)
  %74 = call i32 @Tcl_ListObjAppendElement(i32 0, i32* %71, i32 %73)
  %75 = load i32*, i32** %12, align 8
  %76 = load i32, i32* %10, align 4
  %77 = call i32 @Tcl_NewWideIntObj(i32 %76)
  %78 = call i32 @Tcl_ListObjAppendElement(i32 0, i32* %75, i32 %77)
  %79 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %80 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %79, i32 0, i32 1
  %81 = load i32, i32* %80, align 4
  %82 = load i32*, i32** %12, align 8
  %83 = load i32, i32* @TCL_EVAL_DIRECT, align 4
  %84 = call i32 @Tcl_EvalObjEx(i32 %81, i32* %82, i32 %83)
  %85 = load i32*, i32** %12, align 8
  %86 = call i32 @Tcl_DecrRefCount(i32* %85)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @Tcl_DuplicateObj(i32) #1

declare dso_local i32 @Tcl_IncrRefCount(i32*) #1

declare dso_local i32 @Tcl_ListObjAppendElement(i32, i32*, i32) #1

declare dso_local i32 @Tcl_NewStringObj(i8*, i32) #1

declare dso_local i32 @Tcl_NewWideIntObj(i32) #1

declare dso_local i32 @Tcl_EvalObjEx(i32, i32*, i32) #1

declare dso_local i32 @Tcl_DecrRefCount(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
